# seeing_saying_solving

./: GridWorld.py  README.md  grid_configuration.txt  gurobi_stl.yml  main.py  plot.py  requirements.txt  robot.py  run_experiment.py  utils.py
Scenario 1 tests_2025-06-08/: agent_results_world_7400_with_also_cost_optimum.csv
Scenario 1 tests_2025-06-09/: agent_results_world_7400_with_also_cost_optimum.csv
experiment_1/: .gitignore  README.md  prompt_utils.py  requirements.txt  run_experiment.py
gridworld-gui/: README.md
gridworld-gui/src/: grid.py  grid_configuration.txt  gui.py  main.py  utils.py
image_to_grid/src/: grid_configuration.txt  image_converter.py
turtlebot3_ws_s3/: grid_world.world  latest_issue.txt  wip_warehouse_simple.world
turtlebot3_ws_s3/install/: local_setup.sh  setup.sh
turtlebot3_ws_s3/log/: latest_build
turtlebot3_ws_s3/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws_s3/src/log/: latest_build
turtlebot3_ws_s3/src/robot_vision_tools/: package.xml  setup.py
turtlebot3_ws_s3/src/robot_vision_tools/robot_vision_tools/: camera_image_saver.py  nav2_state_monitor.py  simplified_demo.py
turtlebot3_ws_s3/src/turtlebot3_multi_robot/launch/: experimental_launch.py  gazebo_multi_nav2_world.launch.py  launch_with_cost_map_mask.py  warehouse_gazebo_multi_nav2_world.launch.py
turtlebot3_ws_s3/src/turtlebot3_multi_robot/params/: nav2_params.yaml  nav2_params_forklift.yaml
turtlebot3_ws_s3/src/turtlebot3_multi_robot/urdf/: turtlebot3_waffle.urdf
(+5069 files in other folders)
